fixing broken ui

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,11 +1,11 @@
 .home
 {
     width: 75vw;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     margin-top: 6rem;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 0.4fr 1fr 0.5fr;
     gap: 1.5rem;
     position: relative;
 }
