--- a/frontend/src/styles/Post.css
+++ b/frontend/src/styles/Post.css
@@ -7,7 +7,7 @@
     align-items: flex-start;
     background-color: white;
     box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
-    border-radius: 15px;
+    border-radius: 3px;
     margin-bottom: 0.5rem;
     border-style: solid;
     border-width: 1px;
@@ -44,28 +44,60 @@
 
 .interactions
 {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
-    margin: 1rem;
+    height: 46px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 5px
 
 }
 
 .voting{
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 0.3rem 0.2rem;
     margin-right: 1rem;
-    background-color:#eeeeef ;
     border-radius: 20px;
-    min-width: 5rem;
+    width: 107px;
+    background-color:#f7f7f7; ;
 }
+
 
 .voting button
 {
-    background: none;
-    border: none;
-    align-self: center;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 30px;
+    background: #f7f7f7;
+    border: transparent;
+    padding: 0 10px;
+    cursor: pointer;
+    /* align-self: center; */
+}
+.voting button:hover{
+    background-color: #e7e4e475;
+}
+.upvote-btn{
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+
+}
+
+.downvote-btn{
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+.right-border
+{
+    /* border-width: 1px!important; width: 90px; */
+    border-right-style: solid;
+    border-width: 1px;
+    border-color: #dee0e1;
+    height: 20px;
+    background: #f7f7f7;
 }
 .sharing
 {
@@ -93,9 +125,10 @@
 
 .voting-stats
 {
-    border-right: 1px solid rgba(142, 142, 142, 0.477);
+    
     padding: 0 0.4rem;
     align-self: center;
+    font-size: 13px;
 }
 
 .voting .iconify 
@@ -113,9 +146,9 @@
 
 .post-profile-img
 {
-    width: 2.3rem;
-    height: 2.3rem;
-    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    border-radius: 100%;
     margin-right: 0.4rem;
 
 
@@ -160,7 +193,6 @@
     /* margin: auto; */
     width: 100%;
     height: 100%;
-    margin-bottom: 1rem;
     position: relative;
     
     
