--- a/frontend/src/styles/Section.css
+++ b/frontend/src/styles/Section.css
@@ -7,12 +7,14 @@
 {
   background-color: white;
   padding: 1.5rem;
-  border-radius: 14px;
+  border-radius: 3px;
   margin-bottom: 1.5rem;
   box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
   border-style: solid;
   border-width: 1px;
   border-color: #dee0e1!important;
+  position: sticky;
+  top: calc(75px);
 
 }
 
