--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -3,12 +3,12 @@
 
     height: auto;
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: flex-start;
     flex-direction: column;
     z-index: 0;
-    width: 18%;
-    position: fixed;
+    width: 100%;
+    
   
 
 
@@ -59,14 +59,14 @@
 .profile-elements
 {
     display: flex;
-    align-items: center;
+    align-items: baseline
     
 }
 
-.profile-elements img
+.profile-elements imgents
 {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 18px;
+    height: 18px 
 }
 
 .settings
@@ -113,16 +113,24 @@
 .space-profile-container
 {
    display: flex;
-   align-items: center;
+   align-items: flex-start;
    margin-bottom: 0.7rem;
+   height: auto;
+   padding: 8px;
+   border-radius: 4px;
+   text-align: left;
 
+}
+
+.space-profile-container:hover{
+    background-color: #dee0e1;
 }
 .space-img
 {
     border-radius: 5px;
-    width: 2.3rem;
-    height: 2.3rem;
-    margin-right: 1rem;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
     object-fit: cover;
 }
 
@@ -137,6 +145,25 @@
 .profile-elements
 {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
+.create-space-btn{
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 3px;
+    padding: 8px;
+    width: 100%;
+    margin-bottom: 4px;
+    font-size: 13px; 
+    font-weight: 400;
+    cursor: pointer;
+    color: #636466;
+}
+
+.sticky-container{
+    width: 80%;
+    position: sticky;
+    top: 6rem;
+}
